--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -114,7 +114,7 @@ subject to (2):
 
 \begin{align}
 d_a \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
-																		\forall t'' \geq t' + d_i, t', t'' \in T 	\end{aligned}\\
+																		\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
 N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{act'} \cdot f_{act''} \cdot \rho_{ar}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
 b_{at} >&  \sum_{c \in C} \sum_{t' = t - \lambda_a}^t - f_{act'}								&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
@@ -177,7 +177,7 @@ Parameters:
 
 \end{frame}
 
-%TODO: FIX all but 21, 26 and 27
+%TODO: FIX 22-25
 \begin{frame}{Initial mixed model}
 \scriptsize
 
@@ -191,13 +191,13 @@ Parameters:
 subject to:
 
 \begin{align}
-1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
-1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f_{it'} \cdot \sum_{t' = t}^{\hat{t}} s_{jt'} ]	&	\forall (i, j) \in IP					\\
-1 =& \sum_{t \in T} s_{act}	= \sum_{t \in T} f_{act}									&	\forall a \in A, \forall c \in C^M	\\
-1 \geq& \sum_{t \in T} s_{act}													&	\forall a \in A, \forall c \in C^O	\\
-\sum_{t \in T} s_{act}	=& \sum_{t \in T} f_{act}										&	\forall a \in A, \forall c \in C^O	\\
-0 =& \sum_{t = \dot{t}}^{t'} s^M_{act} \cdot \sum_{t = t'}^{\hat{t}} f^I_{ait}					&	\begin{aligned} \forall a \in A, \forall t' \in T, \\
-																		\forall i \in I, \forall c \in C 	\end{aligned}
+1 =& \sum_{t \in T} s^I_{ait}	= \sum_{t \in T} f^I_{ait}								&	\forall i \in I, \forall a \in A				\\
+1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f^I_{ait'} \cdot \sum_{t' = t}^{\hat{t}} s^I_{ajt'}]	&	\forall (i, j) \in IP, \forall a \in A		\\
+1 =& \sum_{t \in T} s^M_{act}	= \sum_{t \in T} f^M_{act}							&	\forall a \in A, \forall c \in \{1, \dots , c_M \}	\\
+1 \geq& \sum_{t \in T} s^M_{act}											&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
+\sum_{t \in T} s^M_{act}	=& \sum_{t \in T} f^M_{act}								&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
+0 =& \sum_{t = \dot{t}}^{t'} s^M_{act} \cdot \sum_{t = t'}^{\hat{t}} f^I_{ait}				&	\begin{aligned} \forall a \in A, \forall t' \in T, 	\\
+																	\forall i \in I, \forall c \in C 	\end{aligned}
 \end{align}}
 
 \stepcounter{equation}
@@ -213,11 +213,11 @@ subject to (2):
 \tiny
 
 \begin{align}
-d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
-d_a \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
-																		\forall t'' \geq t' + d_i, t', t'' \in T 	\end{aligned}\\
-N_{rp} \geq& \sum_{i\in I} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{act'} \cdot f_{act''} \cdot \rho_{ar}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
+d_i \geq& (f^I_{ait''} + s^I_{ait'} - 1) \cdot \sum_{t = t'}^{t''} \omega^I_{ait} 				& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
+																	\forall t'' \geq t' + d_i, t', t'' \in T	\end{aligned}\\
+d_a \geq& (f^M_{act''} + s^M_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega^M_{act} 				& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
+																	\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
+N_{rp} \geq& \sum_{a\in A} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{air}) + \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{ar}) ]	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
 o_{at} \leq& \sum_{t' = \dot{t}}^{t} f^I_{an_at'} \cdot \sum_{c \in C} \sum_{t' = t - \lambda_a}^t (f^M_{act'} + f^I_{an_at'})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
