--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -37,7 +37,7 @@ O_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \
 
 \begin{frame}{Installation Model Explanation}
 (1) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
-(2) Forces every task to be done at some point	\\
+(2) Forces every task to be starded and finished at some point	\\
 (3) For every precedence relation $(i, j)$ it ensures there is a $t$ such that $i$ has a finish time before $t$, and $i$ a starting time after $t$	\\
 (4) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
 (5) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
@@ -177,7 +177,6 @@ Parameters:
 
 \end{frame}
 
-%TODO: FIX 22-25
 \begin{frame}{Initial mixed model}
 \scriptsize
 
@@ -210,17 +209,82 @@ subject to:
 \only<2>{
 subject to (2):
 
-\tiny
+
 
 \begin{align}
 d_i \geq& (f^I_{ait''} + s^I_{ait'} - 1) \cdot \sum_{t = t'}^{t''} \omega^I_{ait} 				& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
 																	\forall t'' \geq t' + d_i, t', t'' \in T	\end{aligned}\\
 d_a \geq& (f^M_{act''} + s^M_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega^M_{act} 				& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
 																	\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{air}) + \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{ar}) ]	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+N_{rp} \geq& \begin{aligned}\sum_{a\in A} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{air}^I) + \\ \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{ar}^M) ] \end{aligned}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
 o_{at} \leq& \sum_{t' = \dot{t}}^{t} f^I_{an_at'} \cdot \sum_{c \in C} \sum_{t' = t - \lambda_a}^t (f^M_{act'} + f^I_{an_at'})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
+
+\end{frame}
+
+\begin{frame}{Mixed Model Explanation}
+\footnotesize
+(15) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
+(16) (Installation) Forces every task to be starded and finished at some point	\\
+(17) (Installation) For every precedence relation $(i, j)$ it ensures there is a $t$ such that $i$ has a finish time before $t$, and $i$ a starting time after $t$	\\
+(18) (Maintenance) Forces every mandatory maintenance cycle to be starded and finished at some point	\\
+(19) (Maintenance) Ensures each optional maintenance cycle to be started at most once 	\\
+(20) (Maintenance)	Ensures that every maintenance cycle for a particular asset that is started is also finished \\
+(21) (Mixed) Ensures an asset is fully installed before maintenance starts	\\
+(22) (Installation) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
+(23) (Maintenance) Ensures that between the starting and finish times of each cycle are enough timesteps with acceptable weather	\\
+(24) (Mixed) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
+(25) (Mixed) Sets an asset to be online if it installed and had work done on it recently \\
+(26) (Mixed) Counts how many assets are online	
+\end{frame}
+
+\begin{frame}{Notation overview}
+\tiny
+
+\begin{columns}
+\begin{column}{.48\textwidth}
+Sets:
+\begin{itemize}
+\item $P$: All time periods (large scale)
+\item $T$: All time intervals (small scale) [$\dot{t}, \dots , \hat{t}$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $R$: All resources
+\item $I$: All installation tasks per asset [$1, \dots , n_a$]
+\item $A$: All assets
+\item $C$: All ($c_M$ mandatory and ($c_N - c_M$) optional) maintenance cycles [$1, \dots , c_M, \dots , c_N$]
+\end{itemize}
+
+Decision variables:
+\begin{itemize}
+\item $O_{t}$: Number of online turbines at timestep $t$
+\item $o_{at}$: Binary variable, 1 if asset $a$ is online at timestep $t$
+\item $N_{rp}$: Number of resources $r$ used in period $p$
+\item $s^I_{ait}$: Binary variable, 1 if installation task $i$ for asset $a$ starts at time $t$
+\item $f^I_{ait}$: Binary variable, 1 if installation task $i$ for asset $a$ finishes at time $t$
+\item $s^M_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ starts at time $t$
+\item $f^M_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ finishes at time $t$
+\end{itemize}
+\end{column}
+
+\hfill
+
+\begin{column}{.48\textwidth}
+Parameters:
+\begin{itemize}
+\item $DIS$: The discount factor per time period
+\item $v_t$: The value of energy a single turbine produces at timestep $t$
+\item $C_{rp}$: The cost of chartering resource $r$ in period $p$
+\item $d_i$: The duration of installation task $i$
+\item $d_a$: The duration of a maintenance cycle for asset $a$
+\item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
+\item $\omega^I_{ait}$: Binary parameter representing weather, 1 if task $i$ on asset $a$ can be completed at time $t$, 0 otherwise
+\item $\omega^M_{act}$: Binary parameter representing weather, 1 if maintenance cycle $c$ on asset $a$ can be completed at time $t$, 0 otherwise
+\item $\rho^I_{air}$: The amount of resource $r$ used for intallation task $i$ of asset $a$
+\item $\rho^M_{ar}$: The amount of resource $r$ used for maintenance of asset $a$
+\end{itemize}
+\end{column}
+\end{columns}
 
 \end{frame}
 
