Wrote about Merigaud Paper

--- a/Ongoing report/OngoingReport 1.0.tex
+++ b/Ongoing report/OngoingReport 1.0.tex
@@ -310,6 +310,11 @@ In conclusion, these strategies are something I need to consider in my research,
 %ONGOING: Besnard
 In \cite{besnard2011stochastic} an optimisation model is constructed for short-term maintenance planning. The primary goal is to use moments where energy production is expected to be low for maintenance, to minimise production losses. An interesting aspect of this model is the build-in uncertainty of weather forecasts. The researchers have modeled this uncertainty by having a set of scenarios, and they minimise the average cost over all scenarios. The first time step is assumed to have the correct forecast, hence the idea behind the model is for the optimisation to be recomputed regularly. A rolling horizon approach such as this seems like a good method to deal with these uncertain forecasts, although it is computationally expensive to recalculate regularly. 
 
+\bigskip
+
+%ONGOING: Marigaud
+Research regarding Condition-Based Maintenance is summarized in \cite{merigaud2016condition}. This work talks in-depth about many systems available to monitor the health and potential failure rate of many components, which all operate on different levels. It includes research on Tidal Turbines and Wave Energy Converters, but focuses on Wind Turbines. Since it does not talk (much) about logistics, and more about monitoring at an engineering and design level, not much of this work applies to my research, but it is a potential resource to look at if my results indicate that improved condition-tracking is useful or necessary. 
+
 \subsection{Related research regarding offshore projects} \label{ss:offsh}
 While there is not much research relating specifically to decommission projects, there is some. Especially recently there has been new research such as \cite{irawan2019optimisation}. In it the researchers use an Integer Linear Programming method to find schedules for decommission projects with minimum costs. The method is shown to be efficient and seems to yield good results. As expected, this model is fairly similar to the ones used for installation projects. 
 
