--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -27,10 +27,10 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
-1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f_{it'} \cdot \sum_{t' = t}^{\hat{t}} s_{jt'} ]	&	\forall (i, j) \in IP					\\
+1 \leq& \sum_{t = t_0}^{t_N} [ \sum_{t' = t_0}^t f_{it'} \cdot \sum_{t' = t}^{t_N} s_{jt'} ]	&	\forall (i, j) \in IP					\\
 d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
-N_{rp} \geq& \sum_{i\in I} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-O_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
+N_{rp} \geq& \sum_{i\in I} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+O_p =&  \sum_{t = t_0}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
 \end{align}
 
 \end{frame}
@@ -52,7 +52,7 @@ O_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \
 Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
-\item $T$: All time intervals [$\dot{t}, \dots , \hat{t}$]
+\item $T$: All time intervals [$t_0, \dots , t_N$]
 \item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$: All tasks
@@ -113,9 +113,9 @@ subject to (1):
 subject to (2):
 
 \begin{align}
-d_a \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
+d_c \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{ct} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
 																		\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{act'} \cdot f_{act''} \cdot \rho_{ar}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
+N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} s_{act'} \cdot f_{act''} \cdot \rho_{cr}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
 b_{at} >&  \sum_{c \in C} \sum_{t' = t - \lambda_a}^t - f_{act'}								&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 \end{align} }
@@ -142,7 +142,7 @@ O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
-\item $T$: All time intervals (small scale) [$\dot{t}, \dots , \hat{t}$]
+\item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
 \item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $A$: All assets
@@ -167,10 +167,10 @@ Parameters:
 \item $DIS$: The discount factor per time period
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
-\item $d_a$: The duration of a maintenance cycle for asset $a$
+\item $d_c$: The duration per task during maintenance cycle $c$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
-\item $\omega_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
-\item $\rho_{ar}$: The amount of resource $r$ used for maintenance of asset $a$
+\item $\omega_{ct}$: Binary parameter representing weather, 1 if maintenance cycle $c$ can be completed at time $t$, 0 otherwise
+\item $\rho_{cr}$: The amount of resource $r$ used per task for maintenance cycle $c$
 \end{itemize}
 \end{column}
 \end{columns}
@@ -191,13 +191,13 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s^I_{ait}	= \sum_{t \in T} f^I_{ait}								&	\forall i \in I, \forall a \in A				\\
-1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f^I_{ait'} \cdot \sum_{t' = t}^{\hat{t}} s^I_{ajt'}]	&	\forall (i, j) \in IP, \forall a \in A		\\
+1 \leq& \sum_{t = t_0}^{t_N} [ \sum_{t' = t_0}^t f^I_{ait'} \cdot \sum_{t' = t}^{t_N} s^I_{ajt'}]		&	\forall (i, j) \in IP, \forall a \in A		\\
 1 =& \sum_{t \in T} s^M_{act}	= \sum_{t \in T} f^M_{act}							&	\forall a \in A, \forall c \in \{1, \dots , c_M \}	\\
 1 \geq& \sum_{t \in T} s^M_{act}											&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
 \sum_{t \in T} s^M_{act}	=& \sum_{t \in T} f^M_{act}								&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
-0 =& \sum_{t = \dot{t}}^{t'} s^M_{act} \cdot \sum_{t = t'}^{\hat{t}} f^I_{ait}				&	\begin{aligned} \forall a \in A, \forall t' \in T, 	\\
+0 =& \sum_{t = t_0}^{t'} s^M_{act} \cdot \sum_{t = t'}^{t_N} f^I_{ait}					&	\begin{aligned} \forall a \in A, \forall t' \in T, 	\\
 																	\forall i \in I, \forall c \in C 	\end{aligned}
-\end{align}}
+\end{align} }
 
 \stepcounter{equation}
 \stepcounter{equation}
@@ -209,15 +209,13 @@ subject to:
 \only<2>{
 subject to (2):
 
-
-
 \begin{align}
-d_i \geq& (f^I_{ait''} + s^I_{ait'} - 1) \cdot \sum_{t = t'}^{t''} \omega^I_{ait} 				& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
+d^I_i \geq& (f^I_{ait''} + s^I_{ait'} - 1) \cdot \sum_{t = t'}^{t''} \omega^I_{it} 				& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
 																	\forall t'' \geq t' + d_i, t', t'' \in T	\end{aligned}\\
-d_a \geq& (f^M_{act''} + s^M_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega^M_{act} 				& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
+d^M_c \geq& (f^M_{act''} + s^M_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega^M_{ct} 				& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
 																	\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
-N_{rp} \geq& \begin{aligned}\sum_{a\in A} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{air}^I) + \\ \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{ar}^M) ] \end{aligned}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-o_{at} \leq& \sum_{t' = \dot{t}}^{t} f^I_{an_at'} \cdot \sum_{c \in C} \sum_{t' = t - \lambda_a}^t (f^M_{act'} + f^I_{an_at'})	&	\forall a \in A, \forall t \in T \\
+N_{rp} \geq& \begin{aligned}\sum_{a\in A} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{ir}^I) + \\ \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{cr}^M) ] \end{aligned}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+o_{at} \leq& \sum_{t' = t_0}^{t} f^I_{ai_Nt'} \cdot \sum_{c \in C} \sum_{t' = t - \lambda_a}^t (f^M_{act'} + f^I_{ai_Nt'})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
 
@@ -247,10 +245,10 @@ O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
-\item $T$: All time intervals (small scale) [$\dot{t}, \dots , \hat{t}$]
+\item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
 \item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
-\item $I$: All installation tasks per asset [$1, \dots , n_a$]
+\item $I$: All installation tasks per asset [$1, \dots , i_N$]
 \item $A$: All assets
 \item $C$: All ($c_M$ mandatory and ($c_N - c_M$) optional) maintenance cycles [$1, \dots , c_M, \dots , c_N$]
 \end{itemize}
@@ -275,13 +273,13 @@ Parameters:
 \item $DIS$: The discount factor per time period
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
-\item $d_i$: The duration of installation task $i$
-\item $d_a$: The duration of a maintenance cycle for asset $a$
+\item $d^I_i$: The duration of installation task $i$
+\item $d^M_c$: The duration per task during maintenance cycle $c$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
-\item $\omega^I_{ait}$: Binary parameter representing weather, 1 if task $i$ on asset $a$ can be completed at time $t$, 0 otherwise
-\item $\omega^M_{act}$: Binary parameter representing weather, 1 if maintenance cycle $c$ on asset $a$ can be completed at time $t$, 0 otherwise
-\item $\rho^I_{air}$: The amount of resource $r$ used for intallation task $i$ of asset $a$
-\item $\rho^M_{ar}$: The amount of resource $r$ used for maintenance of asset $a$
+\item $\omega^I_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
+\item $\omega^M_{ct}$: Binary parameter representing weather, 1 if maintenance cycle $c$ can be completed at time $t$, 0 otherwise
+\item $\rho^I_{ir}$: The amount of resource $r$ used for intallation task $i$
+\item $\rho^M_{cr}$: The amount of resource $r$ used per task for maintenance cycle $c$
 \end{itemize}
 \end{column}
 \end{columns}
