--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -27,10 +27,10 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
-1 \leq& \sum_{t = t_0}^{t_N} [ \sum_{t' = t_0}^t f_{it'} \cdot \sum_{t' = t}^{t_N} s_{jt'} ]	&	\forall (i, j) \in IP					\\
-d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
-N_{rp} \geq& \sum_{i\in I} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-O_p =&  \sum_{t = t_0}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
+1 \leq& \sum_{t_1 = t_0}^{t_N} [ \sum_{t_2 = t_0}^{t_1} f_{it_2} \cdot \sum_{t_3 = t_1}^{t_N} s_{jt_3} ]	&	\forall (i, j) \in IP					\\
+d_i \geq& (f_{it_2} + s_{it_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 							& 	\forall i \in I, 	\forall t_1, t_2 \in T | t_2 \geq t_1 + d_i	\\
+N_{rp} \geq& \sum_{i\in I} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N} s_{it_1} \cdot f_{it_2} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+O_p =&  \sum_{t = t_0}^{t_p} \sum_{i \in F} f_{it}									&	\forall p \in P
 \end{align}
 
 \end{frame}
@@ -80,7 +80,7 @@ Parameters:
 \item $d_i$: The duration of task $i$
 \item $\omega_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
 \item $\rho_{ir}$: The amount of resource $r$ used by task $i$
-\item $\tau_p$: The final time interval (from $T$) in period $p$
+\item $t_p$: The final time interval (from $T$) in period $p$
 \end{itemize}
 \end{column}
 \end{columns}
@@ -113,10 +113,9 @@ subject to (1):
 subject to (2):
 
 \begin{align}
-d_c \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{ct} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
-																		\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} s_{act'} \cdot f_{act''} \cdot \rho_{cr}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
-b_{at} >&  \sum_{c \in C} \sum_{t' = t - \lambda_a}^t - f_{act'}								&	\forall a \in A, \forall t \in T 	\\
+d_c \geq& (f_{act_2} + s_{act_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{ct_3} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\																\forall t_1, t_2 \in T | t_2 \geq t_1 + d_c \end{aligned}\\
+N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N} s_{act_1} \cdot f_{act_2} \cdot \rho_{cr}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
+b_{at} >&  \sum_{c \in C} \sum_{t_1 = t - \lambda_a}^t - f_{act_1}								&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 \end{align} }
 
@@ -191,11 +190,11 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s^I_{ait}	= \sum_{t \in T} f^I_{ait}								&	\forall i \in I, \forall a \in A				\\
-1 \leq& \sum_{t = t_0}^{t_N} [ \sum_{t' = t_0}^t f^I_{ait'} \cdot \sum_{t' = t}^{t_N} s^I_{ajt'}]		&	\forall (i, j) \in IP, \forall a \in A		\\
+1 \leq& \sum_{t_1 = t_0}^{t_N} [ \sum_{t_2 = t_0}^{t_1} f^I_{ait_2} \cdot \sum_{t_3 = t_1}^{t_N} s^I_{ajt_3}]	&	\forall (i, j) \in IP, \forall a \in A	\\
 1 =& \sum_{t \in T} s^M_{act}	= \sum_{t \in T} f^M_{act}							&	\forall a \in A, \forall c \in \{1, \dots , c_M \}	\\
 1 \geq& \sum_{t \in T} s^M_{act}											&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
 \sum_{t \in T} s^M_{act}	=& \sum_{t \in T} f^M_{act}								&	\forall a \in A, \forall c \in \{c_M + 1, \dots , c_N \}	\\
-0 =& \sum_{t = t_0}^{t'} s^M_{act} \cdot \sum_{t = t'}^{t_N} f^I_{ait}					&	\begin{aligned} \forall a \in A, \forall t' \in T, 	\\
+0 =& \sum_{t_1 = t_0}^t s^M_{act_1} \cdot \sum_{t_2 = t}^{t_N} f^I_{ait_2}					&	\begin{aligned} \forall a \in A, \forall t \in T, 	\\
 																	\forall i \in I, \forall c \in C 	\end{aligned}
 \end{align} }
 
@@ -210,12 +209,12 @@ subject to:
 subject to (2):
 
 \begin{align}
-d^I_i \geq& (f^I_{ait''} + s^I_{ait'} - 1) \cdot \sum_{t = t'}^{t''} \omega^I_{it} 				& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
-																	\forall t'' \geq t' + d_i, t', t'' \in T	\end{aligned}\\
-d^M_c \geq& (f^M_{act''} + s^M_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega^M_{ct} 				& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
-																	\forall t'' \geq t' + d_a, t', t'' \in T	\end{aligned}\\
-N_{rp} \geq& \begin{aligned}\sum_{a\in A} \sum_{t' = t_0}^t \sum_{t'' = t}^{t_N} [ \sum_{i\in I} (s^I_{ait'} \cdot f^I_{ait''} \cdot \rho_{ir}^I) + \\ \sum_{c\in C} (s^M_{act'} \cdot f^M_{act''} \cdot \rho_{cr}^M) ] \end{aligned}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-o_{at} \leq& \sum_{t' = t_0}^{t} f^I_{ai_Nt'} \cdot \sum_{c \in C} \sum_{t' = t - \lambda_a}^t (f^M_{act'} + f^I_{ai_Nt'})	&	\forall a \in A, \forall t \in T \\
+d^I_i \geq& (f^I_{ait_2} + s^I_{ait_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega^I_{it_3} 			& 	\begin{aligned} \forall i \in I, \forall a \in A, \\
+																	\forall t_1, t_2 \in T | t_2 \geq t_1 + d^I_i \end{aligned}\\
+d^M_c \geq& (f^M_{act_2} + s^M_{act_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega^M_{ct_3} 			& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
+																	\forall t_1, t_2 \in T | t_2 \geq t_1 + d^m_c \end{aligned}\\
+N_{rp} \geq& \begin{aligned}\sum_{a\in A} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N} [ \sum_{i\in I} (s^I_{ait_1} \cdot f^I_{ait_2} \cdot \rho_{ir}^I) + \\ \sum_{c\in C} (s^M_{act_1} \cdot f^M_{act_2} \cdot \rho_{cr}^M) ] \end{aligned}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+o_{at} \leq& \sum_{t_1 = t_0}^{t} f^I_{ai_Nt_1} \cdot \sum_{c \in C} \sum_{t_2 = t - \lambda_a}^t (f^M_{act_2} + f^I_{ai_Nt_2})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
 
