--- a/Ongoing report/mybib.bib
+++ b/Ongoing report/mybib.bib
@@ -439,3 +439,14 @@
   year={2011},
   organization={IEEE}
 }
+
+@article{dinwoodie2015reference,
+  title={Reference cases for verification of operation and maintenance simulation models for offshore wind farms},
+  author={Dinwoodie, Iain and Endrerud, Ole-Erik V and Hofmann, Matthias and Martin, Rebecca and Sperstad, Iver Bakken},
+  journal={Wind Engineering},
+  volume={39},
+  number={1},
+  pages={1--14},
+  year={2015},
+  publisher={SAGE Publications Sage UK: London, England}
+}
