--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -27,10 +27,11 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
-1 \leq& \sum_{t_1 = t_0}^{t_N} [ \sum_{t_2 = t_0}^{t_1} f_{it_2} \cdot \sum_{t_3 = t_1}^{t_N} s_{jt_3} ]	&	\forall (i, j) \in IP					\\
-d_i \geq& (f_{it_2} + s_{it_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 							& 	\forall i \in I, 	\forall t_1, t_2 \in T | t_2 \geq t_1 + d_i	\\
-N_{rp} \geq& \sum_{i\in I} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N} s_{it_1} \cdot f_{it_2} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-O_p =&  \sum_{t = t_0}^{t_p} \sum_{i \in F} f_{it}									&	\forall p \in P
+1 \geq& s_{jt_1} + f_{it_2}											&	\begin{aligned} \forall (i, j) \in IP, \\
+																	\forall t_1, t_2 \in T | t_1 < t_2 \end{aligned} \\
+d_i \geq& (f_{it_2} + s_{it_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 				& \forall i \in I, \forall t_1, t_2 \in T | t_2 \geq t_1 + d_i	\\
+N_{rp} \geq& \sum_{i\in I} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{it_1} - f_{it_1})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+O_p =&  \sum_{t = t_0}^{t_p} \sum_{i \in F} f_{it}									& \forall p \in P
 \end{align}
 
 \end{frame}
@@ -38,9 +39,9 @@ O_p =&  \sum_{t = t_0}^{t_p} \sum_{i \in F} f_{it}									&	\forall p \in P
 \begin{frame}{Installation Model Explanation}
 (1) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
 (2) Forces every task to be starded and finished at some point	\\
-(3) For every precedence relation $(i, j)$ it ensures there is a $t$ such that $i$ has a finish time before $t$, and $i$ a starting time after $t$	\\
+(3) For every precedence relation $(i, j)$ it ensures that if task $i$ finishes at time $t_2$ there is no $t_1 < t_2$ at which task $j$ starts 	\\
 (4) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
-(5) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
+(5) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
 (6) Counts the number of turbines which finished installing by the end of a period	
 \end{frame}
 
@@ -114,7 +115,7 @@ subject to (2):
 
 \begin{align}
 d_c \geq& (f_{act_2} + s_{act_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{ct_3} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\																\forall t_1, t_2 \in T | t_2 \geq t_1 + d_c \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N} s_{act_1} \cdot f_{act_2} \cdot \rho_{cr}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
+N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{act_1} - f_{act_1})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 	\\
 b_{at} >&  \sum_{c \in C} \sum_{t_1 = t - \lambda_a}^t - f_{act_1}								&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 \end{align} }
@@ -128,7 +129,7 @@ O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 (9) Ensures each optional maintenance cycle to be started at most once	\\
 (10) Ensures that every maintenance cycle for a particular asset that is started is also finished	\\
 (11) Ensures that between the starting and finish times of each cycle are enough timesteps with acceptable weather	\\
-(12) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
+(12) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
 (13) If no maintenance tasks have finished in the past $\lambda_a$ timesteps this asset is broken	\\
 (14) The number of active (online) turbines is equal to everything that isn't broken
 \end{frame}
@@ -190,7 +191,8 @@ subject to:
 
 \begin{align}
 1 =& \sum_{t \in T} s_{ait}	= \sum_{t \in T} f_{ait}								&	\forall i \in I \cup M^M, \forall a \in A				\\
-1 \leq& \sum_{t_1 = t_0}^{t_N} [ \sum_{t_2 = t_0}^{t_1} f_{ait_2} \cdot \sum_{t_3 = t_1}^{t_N} s_{ajt_3}]	&	\forall (i, j) \in IP, \forall a \in A	\\
+1 \geq& s_{ajt_1} + f_{ait_2}											&	\begin{aligned} \forall (i, j) \in IP, \forall a \in A, \\
+																	\forall t_1, t_2 \in T | t_1 < t_2 \end{aligned} \\
 1 \geq& \sum_{t \in T} s_{ait}												&	\forall a \in A, \forall i \in M^O	\\
 \sum_{t \in T} s_{ait}	=& \sum_{t \in T} f_{ait}									&	\forall a \in A, \forall i \in M^O	\\
 0 =& \sum_{t_1 = t_0}^t s_{ajt_1} + \sum_{t_2 = t}^{t_N} f_{ait_2}					&	\begin{aligned} \forall a \in A, \forall t \in T, 	\\
@@ -209,8 +211,8 @@ subject to (2):
 \begin{align}
 d_i \geq& (f_{ait_2} + s_{ait_1} - 1) \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 				& 	\begin{aligned} \forall i \in \mathcal{I}, \forall a \in A, \\
 																	\forall t_1, t_2 \in T | t_2 \geq t_1 + d_i \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{t_1 = t_0}^t \sum_{t_2 = t}^{t_N}  \sum_{i\in \mathcal{I}} (s_{ait_1} \cdot f_{ait_2} \cdot \rho_{ir}) & \forall r \in R, \forall p \in P, \forall t \in T_p \\
-o_{at} \leq& \sum_{t_1 = t_0}^{t} f_{ai_Nt_1} \cdot \sum_{i \in M \cup \{i_N\}} \sum_{t_2 = t - \lambda_a}^t f_{ait_2}	&	\forall a \in A, \forall t \in T \\
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{ait_1} - f_{ait_1})) & \forall r \in R, \forall p \in P, \forall t \in T_p \\
+o_{at} \leq& \frac{1}{2} \cdot (\sum_{t_1 = t_0}^{t} f_{ai_Nt_1} + \sum_{i \in M \cup \{i_N\}} \sum_{t_2 = t - \lambda_a}^t f_{ait_2})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
 
@@ -219,15 +221,15 @@ O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \begin{frame}{Mixed Model Explanation}
 \footnotesize
 (15) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
-(16) (Mixed) Forces every mandatory task to be starded and finished at some point	\\
-(17) (Installation) For every precedence relation $(i, j)$ it ensures there is a $t$ such that $i$ has a finish time before $t$, and $i$ a starting time after $t$	\\
-(18) (Maintenance) Ensures each optional maintenance task to be started at most once 	\\
-(19) (Maintenance)	Ensures that every maintenance task for a particular asset that is started is also finished \\
-(20) (Mixed) Ensures an asset is fully installed before maintenance starts	\\
-(21) (Mixed) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
-(22) (Mixed) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
-(23) (Mixed) Sets an asset to be online if it installed and had work done on it recently \\
-(24) (Mixed) Counts how many assets are online	
+(16) Forces every mandatory task to be starded and finished at some point	\\
+(17) For every precedence relation $(i, j)$ it ensures that if task $i$ finishes at time $t_2$ there is no $t_1 < t_2$ at which task $j$ starts 	\\
+(18) Ensures each optional maintenance task to be started at most once 	\\
+(19) Ensures that every maintenance task for a particular asset that is started is also finished \\
+(20) Ensures an asset is fully installed before maintenance starts	\\
+(21) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
+(22) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
+(23) Sets an asset to be online if it installed and had work done on it recently \\
+(24) Counts how many assets are online	
 \end{frame}
 
 \begin{frame}{Notation overview}
