Updated report with Dinwoodie2015

--- a/Ongoing report/OngoingReport 1.0.tex
+++ b/Ongoing report/OngoingReport 1.0.tex
@@ -301,9 +301,15 @@ This point especially seems strange, as in another paper \cite{dinwoodie2014oper
 
 It is found that the latter three strategies are all close in costs, and which performs better depends on scenario specifics such as fluctuations in vessel costs, the value of energy, and specific failure rates. Each of the strategies also has inherent characteristics that the operator might have preferences in, such as the purchase strategy having much higher costs up front, but lower operational costs. 
 
-As the previous paper discussed, this research is also lacking in crucial areas. It is clear to see the feasibility of the batch repair strategy depends on the batch size chosen, and no mention is given on how this is determined. A similar issue arrises with he purchase strategy, which is not a complete strategy in itself since after purchasing a vessel there is still a choice on when to deploy it (predetermined times, after every failure, or after a batch of failures). This too is not discussed, even though related details such as potentially renting out a purchased vessel to improve this strategy are speculated about. Another issue is that mixing of strategies is only very briefly discussed, while this intuitively seems like it might be beneficial. For example, in batch repair, if the batch size is set to 5 failures and for an extended period of time there are 4 failures, it might be beneficial to repair it if this situation goes on for long enough. One way to do this is to mix the annual charter strategy with the batch repair strategy, having a set time to do maintenance even if the required number of failures is not reached. 
+Like the previous paper discussed, this research is also lacking in crucial areas. It is clear to see the feasibility of the batch repair strategy depends on the batch size chosen, and no mention is given on how this is determined. A similar issue arises with he purchase strategy, which is not a complete strategy in itself since after purchasing a vessel there is still a choice on when to deploy it (predetermined times, after every failure, or after a batch of failures). This too is not discussed, even though related details such as potentially renting out a purchased vessel to improve this strategy are speculated about. Another issue is that mixing of strategies is only very briefly discussed, while this intuitively seems like it might be beneficial. For example, in batch repair, if the batch size is set to 5 failures and for an extended period of time there are 4 failures, it might be beneficial to repair it if this situation goes on for long enough. One way to do this is to mix the annual charter strategy with the batch repair strategy, having a set time to do maintenance even if the required number of failures is not reached. 
 
 In conclusion, these strategies are something I need to consider in my research, and while the research presented here is a useful foundation, significantly more research needs to be done into these operational strategies. 
+
+In \cite{dinwoodie2015reference} this group of researchers proposes a reference case for maintenance models. Their idea is for various maintenance models to optimise a constructed scenario a fictional windfarm, as a benchmark to compare these models. This allows us to see which models perform better in various scenarios, as they constructed a base case and a set of variants. In the paper they compare four models, and compare various metrics of the results. For availability of the windfarms all results are extremely close, apart from three scenarios. It is explained that this is due to previously unknown assumptions in the different models, such as weather parallel maintenance tasks are possible on the same turbine, and the moment at which tasks should be assigned to vessels. 
+
+This uncovering of assumptions is another benefit of using a standardised reference case to verify a model. Seeing that a new model performs similarly to other models apart from certain scenarios can give insight into how this new model handles these scenarios in ways that might otherwise have gone unnoticed, as demonstrated in this paper. However it also comes with certain drawbacks. In order to properly handle these scenarios some of the models needed to be adjusted, hence a new model which is planned to be verified through this method might limit itself to be able to handle these scenarios. Therefore there is a risk for model space to be restricted in known and unknown ways if they are expected to be benchmarked by a technique like this, as they will have to take in this specific data as input. 
+
+That said, this benchmarking technique still seems promising to compare different models, and the above drawbacks are drawbacks that will likely be in place anyway for models that aim to be commercially viable, as those models will have to accept a certain type of input data. Therefore academic models should always be free to deviate from any limits these benchmarks might place it in, but the technique is still valuable especially to compare models for commercial use. Since the models I intend to make are not completely novel ways to model maintenance operations, I will likely aim to benchmark my models through the reference cases presented here.  
 
 \bigskip
 
